// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Content icon input (snapshot) 1`] = `
<div
  className="input-wrapper input-wrapper-icon"
>
  <span
    className="input-icon"
  >
    <span
      className="material-icons "
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": "20px",
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      person
    </span>
  </span>
  <input
    className="input"
    onChange={[Function]}
    style={
      Object {
        "width": "undefinedpx",
      }
    }
    type="email"
    value="john.doe@manual.to"
  />
</div>
`;

exports[`Input Content password input (snapshot) 1`] = `
<input
  className="input"
  onChange={[Function]}
  style={
    Object {
      "width": "undefinedpx",
    }
  }
  type="password"
  value="Search for documents and collections"
/>
`;

exports[`Input Disabled text input (snapshot) 1`] = `
<input
  className="input"
  disabled={true}
  name="full_name"
  onChange={[Function]}
  style={
    Object {
      "width": "undefinedpx",
    }
  }
/>
`;

exports[`Input Empty text input (snapshot) 1`] = `
<input
  className="input"
  onChange={[Function]}
  style={
    Object {
      "width": "undefinedpx",
    }
  }
  type="text"
/>
`;

exports[`Input Input with placeholder (snapshot) 1`] = `
<input
  className="input"
  name="full_name"
  onChange={[Function]}
  placeholder="your name"
  style={
    Object {
      "width": "undefinedpx",
    }
  }
  type="text"
/>
`;

exports[`Input Inverted search input (snapshot) 1`] = `
<div
  className="input-wrapper input-wrapper-search input-wrapper--inverted"
>
  <span
    className="input-icon"
  >
    <span
      className="material-icons "
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      search
    </span>
  </span>
  <input
    className="input input--inverted"
    name="search"
    onChange={[Function]}
    style={
      Object {
        "width": "undefinedpx",
      }
    }
    type="text"
  />
</div>
`;

exports[`Input Search input (snapshot) 1`] = `
<div
  className="input-wrapper input-wrapper-search"
>
  <span
    className="input-icon"
  >
    <span
      className="material-icons "
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      search
    </span>
  </span>
  <input
    className="input"
    name="search"
    onChange={[Function]}
    style={
      Object {
        "width": "undefinedpx",
      }
    }
    type="text"
  />
</div>
`;
